2014-02-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop AC_FUNC_{ALLOCA,FORK} (results not used).

2013-09-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gs-device.m4, makeinfo.m4: Slightly rewrite, update Copyright.

2013-09-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop ACLOCAL_AMFLAGS.
	* configure.ac: Use AC_CONFIG_MACRO_DIRS.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, doc/Makefile.am:
	Moved Makefile fragments to ../../am/.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipng.test: ALso run 'dvipng --gif'.
	* Makefile.am (CLEANFILES): Adapted.

2013-05-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac (new): Define dvipng version.
	* configure.ac: Use version.ac.  Do not use AC_FUNC_MALLOC
	because this might redefine malloc() as rpl_malloc().

2013-05-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/withenable.ac, Makefile.am, configure.ac: Drop t1lib.

2013-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Allow subdir-objects.

2012-11-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (dvipng_dependencies): Drop indirect dependencies.

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop check for 64-bit integer types, already
	done via KPSE_COMMON.

2012-05-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipng.test: Cope with spaces in paths returned by kpsewhich.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (CLEANFILES): Adapt to 'new' test script.

2011-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../am/bin_links.am for $(bindir) links.

2011-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac [WIN32]: Add dvigif.exe wrapper.

2011-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* doc/Makefile.am: Use ../am/man1_links.am for manpage links.

2010-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
